[]
- Improved error messages with enclosing structure info (but no line info)
- Bugfixes in parsing

[0.3.1]
- Fix different behaviours for different load functions

[0.3.0]
- Rename SerializeSettins to SerializeSettings (breaking change!)
- Float parsing is more compliant: can handle inf, NaN and 1e1
- Fixed reading and writing from files just not working
- Fix building for ghc-9.2
- Add Data.Ron reexport module
- Improve documentation

[0.2.0]
- Add options for generic instances
- Add RonWith to conveniently derive instances with DerivingVia
- Use scientific instead of double
- Fix float parsing

[0.1.2]
- Improved serialization, add style settings
- Fix more bugs with chars
- Add convenience ser-de functions

[0.1.1]
- add Char
- add embedded comments
- bugfixes